--- a/검색엔진/검색엔진/검색엔진.vcxproj.filters
+++ b/검색엔진/검색엔진/검색엔진.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="user.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="answer.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
