--- a/뉴스피드/뉴스피드/뉴스피드.vcxproj.filters
+++ b/뉴스피드/뉴스피드/뉴스피드.vcxproj.filters
@@ -24,5 +24,17 @@
     <ClCompile Include="user2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="answer1.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="user3.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="answer2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="answer3.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
