--- a/뉴스피드/뉴스피드/뉴스피드.vcxproj.filters
+++ b/뉴스피드/뉴스피드/뉴스피드.vcxproj.filters
@@ -36,5 +36,8 @@
     <ClCompile Include="answer3.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="user4(answer3).cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
