--- a/Table Calculator 2/Table Calculator 2/Table Calculator 2.vcxproj
+++ b/Table Calculator 2/Table Calculator 2/Table Calculator 2.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="user.cpp" />
+    <ClCompile Include="user2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
