--- a/Directory/Directory/Directory.vcxproj
+++ b/Directory/Directory/Directory.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="user.cpp" />
     <ClCompile Include="user2.cpp" />
+    <ClCompile Include="user3.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
