--- a/Directory/Directory/Directory.vcxproj.filters
+++ b/Directory/Directory/Directory.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="user2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="user3.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
