--- a/SNS/SNS/SNS.vcxproj.filters
+++ b/SNS/SNS/SNS.vcxproj.filters
@@ -24,5 +24,11 @@
     <ClCompile Include="user2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="answer.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="user3.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
