--- a/파일손상/파일손상/파일손상.vcxproj.filters
+++ b/파일손상/파일손상/파일손상.vcxproj.filters
@@ -21,5 +21,17 @@
     <ClCompile Include="user.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="answer.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="originalCode.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="user2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="answer2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
