--- a/파일손상/파일손상/파일손상.vcxproj
+++ b/파일손상/파일손상/파일손상.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{53e81f6f-86ac-4a27-9f9b-5dc116ce4f1a}</ProjectGuid>
     <RootNamespace>파일손상</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>파일손상2</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -139,8 +140,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="answer.cpp" />
+    <ClCompile Include="answer2.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="originalCode.cpp" />
     <ClCompile Include="user.cpp" />
+    <ClCompile Include="user2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
