--- a/Directory/Directory/Directory.vcxproj
+++ b/Directory/Directory/Directory.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="user.cpp" />
     <ClCompile Include="user2.cpp" />
     <ClCompile Include="user3.cpp" />
+    <ClCompile Include="user4.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
