--- a/파일손상/파일손상/파일손상.vcxproj
+++ b/파일손상/파일손상/파일손상.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="originalCode.cpp" />
     <ClCompile Include="user.cpp" />
     <ClCompile Include="user2.cpp" />
+    <ClCompile Include="user3.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
