--- a/Directory/Directory/Directory.vcxproj.filters
+++ b/Directory/Directory/Directory.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="user4.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="user5.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
